--- a/EducationEverest/css/File_admission_application.css
+++ b/EducationEverest/css/File_admission_application.css
@@ -1201,14 +1201,14 @@ div.callout1 {
     }
 
     .filter_results_callout.bottom::before {
-        left: 54%;
+        left: 670px;
         top: -20px;
         border-bottom: 10px solid white;
     }
 
 .filter_results_details_callout {
     position: relative;
-    box-shadow: 0px 0px 20px #999;
+    box-shadow: -2px 2px 4px #999;
     /*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
 }
 
@@ -1798,6 +1798,7 @@ preference_select_campus1 {
     border-bottom: 1px solid;
     border-bottom-color: #CCCCCC;
     box-shadow: 2px 3px 2px #888888;
+    margin-top:-12px;
 }
 
 .NormalCharacterStyle111 {
