--- a/EducationEverest/css/File_admission_application.css
+++ b/EducationEverest/css/File_admission_application.css
@@ -1439,15 +1439,17 @@ margin-right: -10em;
 }
 
 .profile_image {
-    background-image: url('../images/profile_pic.png');
+    /*background-image: url('../images/profile_pic.png');*/
     /*To create image referenced in CSS, use 'Export Selected CSS' command.*/
     background-repeat: no-repeat;
     position: absolute;
     display: block;
     left: 36%;
     top: 70px;
-    width: 119px;
-    height: 119px;
+    vertical-align: middle;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
 .profile_sidemenu {
