--- a/EducationEverest/css/File_admission_application.css
+++ b/EducationEverest/css/File_admission_application.css
@@ -1277,7 +1277,7 @@ div.callout1 {
     height: 52px;
 }
 
-.jazz_cash_logo {
+/*.jazz_cash_logo {
     background-image: url(../images/jazz_cash_logo.png);
     background-repeat: no-repeat;
     position: absolute;
@@ -1285,7 +1285,18 @@ div.callout1 {
     left: 40%;
     width: 88px;
     height: 88px;
+}*/
+
+.jazz_cash_logo {
+    background-image: url(../images/BOP_logo.jpg);
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    width: 75px;
+    height: 52px;
 }
+
 
 .paypal_icon {
     background-image: url(../images/paypal_icon.png);
